examples/ingress/on_premise/console_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-ingress
  namespace: spaceone
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.console.example.com"  # Change the domain
      secretName: spaceone-tls
  rules:
    - host: "*.console.example.com"  # Change the domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console 
                port:
                  number: 80
