examples/ingress/on_premise/rest_api_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-api-ingress
  namespace: spaceone
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.api.example.com"  # Change the hostname
      secretName: spaceone-tls
  rules:
    - host: "console.api.example.com"  # Change the hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console-api
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-api-v2-ingress
  namespace: spaceone
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "*.api.example.com"  # Change the hostname
      secretName: spaceone-tls
  rules:
    - host: "console-v2.api.example.com"  # Change the hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console-api-v2-rest
                port:
                  number: 80
